--- a/css/one.css
+++ b/css/one.css
@@ -72,20 +72,26 @@ textarea::placeholder {
     color: #0A3871;
 }
 
-.btn-2:hover {
+.btn-2:hover, .btn-3:hover, .btn-4:hover {
     cursor: pointer;
 }
 
-.btn-3 {
+.btn-3, .btn-4 {
     margin: 20px 0 0 20px;
-    width: 100px;
+    width: 328px;
     padding: 24px;
     border-radius: 24px;
     font-size: 16px;
     background-color: #D8DFE8;
     border: 1px solid #0A3871;
     color: #0A3871;
+    display: none;
 
+}
+
+a:link, a:visited {
+    text-decoration: none;
+    color: #0A3871;
 }
 
 .container-1 {
@@ -104,6 +110,7 @@ textarea::placeholder {
     color: #343A40;
     margin: 30px;
     display: none;
+    border: none;
 } 
 
 .imagem-lupa {
