--- a/css/one.css
+++ b/css/one.css
@@ -113,6 +113,10 @@ a:link, a:visited {
     border: none;
 } 
 
+.texto-gerado {
+    outline: 0;
+}
+
 .imagem-lupa {
     margin: 100px 0 30px 0;
 }
